--- a/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
@@ -265,9 +265,9 @@
                   editor: Slick.Editors.Text,
                 },
                 {
-                  id: "stdYm",
+                  id: "stdYymm",
                   name: "Standard YYYY/MM",
-                  field: "stdYm",
+                  field: "stdYymm",
                   sortable: true,
                   editor: Slick.Editors.Text,
                 },
