--- a/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
+++ b/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
@@ -263,9 +263,9 @@
               cssClass: "slick-column-right"
             },
             {
-              id: "regUsrid",
+              id: "frstRegEmpNo",
               name: "Registrant",
-              field: "regUsrid",
+              field: "frstRegEmpNo",
               width: 100,
               sortable: true,
               editor: Slick.Editors.Text,
@@ -274,9 +274,9 @@
               
             },
             {
-              id: "regDt",
+              id: "frstRegDtm",
               name: "Registration Date",
-              field: "regDt",
+              field: "frstRegDtm",
               width: 120,
               sortable: true,
               editor: Slick.Editors.Text,
