--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -26,16 +26,12 @@
 			<div class="collapse navbar-collapse" id="navbar-menu">
 				<span class="link-light">Welcome!</span>&nbsp;&nbsp;
 				<span class="link-light">You must be</span>&nbsp;&nbsp;
-				<span class="link-yellow"><b>[[${loginDTO.usrNm}]]</b></span>&nbsp;&nbsp;
+				<span class="badge rounded-pill badge-outline text-white"><b>[[${loginDTO.usrNm}]]</b></span>&nbsp;&nbsp;
 				<span class="link-light">works at</span>&nbsp;&nbsp;
-				<span class="link-yellow"><b>[[${loginDTO.compNm}]]</b></span>
+				<span class="badge rounded-pill badge-outline text-white"><b>[[${loginDTO.compNm}]]</b></span>&nbsp;&nbsp;
 				<th:block th:if="${loginDTO.csNo != '999'}">
-					<span class="link-light">, currently subscribing to</span>&nbsp;&nbsp;
-					<span class="link-yellow"><b>[[${loginDTO.srvcNm}]]</b></span>
-					<span class="link-light">.</span>
-				</th:block>
-				<th:block th:if="${loginDTO.csNo == '999'}">
-					&nbsp;<span class="link-light">as a System Administrator.</span>
+					<span class="link-light">currently subscribing to</span>&nbsp;&nbsp;
+					<span class="badge rounded-pill badge-outline text-white"><b>[[${loginDTO.srvcNm}]]</b></span>
 				</th:block>
 			</div>
 		</div>
