--- a/src/main/resources/templates/views/biz/ins/BIZINS001M0.html
+++ b/src/main/resources/templates/views/biz/ins/BIZINS001M0.html
@@ -11,8 +11,10 @@
 					<div class="form-box">
 						<form id="filter-form" name="form" method="post" action="/BIZINS001M0SelectList" onsubmit="return false;">
 							<div class="row">
-								<div class="col">
-									<input id="inpSearchTxt" name="inpSearchTxt" type="text" class="form-input-temp" placeholder="Account Title/Name" />
+								<div class="col-sm-6 col-md-3">
+									<input id="inpSearchTxt" name="inpSearchTxt" type="text" class="form-control p-1" placeholder="Account Title/Name" />
+								</div>
+								<div class="col-auto">
 									<button type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">Search</button>
 								</div>
 								<div class="col text-end">
@@ -121,7 +123,7 @@
 		var xcpt_cols = [unqId, "regUsrid", "regDt"];
 		var check_cols = [unqId, ];
 		var columns = [
-				{id: "ptfCd",				name: "Portfolio",							field: "ptfCd",					width: 400,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, 								headerCssClass: "slick-header-columns"},
+				{id: "ptfCd",				name: "Portfolio",							field: "ptfCd",					width: 400,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, 								headerCssClass: "slick-header-columns", cssClass: "slick-column-left"},
 				{id: "basAmt",				name: "Basis",								field: "basAmt",				width: 150,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, formatter: currencyFormatter, 	headerCssClass: "slick-header-columns", cssClass: "slick-column-right" },
 				{id: "ociAmt",				name: "OCI",								field: "ociAmt",				width: 150,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, formatter: currencyFormatter, 	headerCssClass: "slick-header-columns", cssClass: "slick-column-right" },
 				{id: "newContAmt",			name: "New Contract",						field: "newContAmt",			width: 150,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, formatter: currencyFormatter, 	headerCssClass: "slick-header-columns", cssClass: "slick-column-right" },
@@ -152,7 +154,8 @@
             enableAddRow: true,
             asyncEditorLoading: false,
             autoEdit: false,
-            autoEditNewRow: false
+            autoEditNewRow: false,
+            rowHeight: 35,
         };
         
         var newRowIds = 0;
@@ -170,24 +173,8 @@
                 }
             }
         };
-
-        function addSlickGridSomeStyling() {
-            const style = document.createElement("style");
-            style.innerHTML = `
-                .slick-header-columns {
-                    font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-                    font-size: 13px;
-                }
-                .slick-cell {
-                    font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-                    font-size: 13px;
-                }
-                `;
-            document.head.appendChild(style);
-        };
         
         function main() {
-            addSlickGridSomeStyling();
             // 그리드 초기화 및 데이터 로드
             console.log("Initializing SlickGrid...");
             getList(
